[project]
name = "arxiv-researcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Armendariz", email = "david.adrian.a.p@gmail.com"},
]
dependencies = ["arxiv>=2.1.3", "llama-index>=0.12.8", "python-dotenv>=1.0.1", "notebook>=7.3.2", "streamlit>=1.41.1", "pinecone-client>=5.0.1", "llama-index-vector-stores-pinecone>=0.4.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
